--- a/ui/html/base.go.html
+++ b/ui/html/base.go.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='/static/css/main.css'>
     <link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-icon'>
     <!-- Also link to some fonts hosted by Google -->
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700'>
+    <link rel='stylesheet' href='https://fonts.bunny.net/css?family=albert-sans:400,700'>
 </head>
 <body>
 <header>
@@ -18,7 +18,7 @@
 <main>
     {{template "main" .}}
 </main>
-<footer>Powered by <a href='https://golang.org/'>Go</a></footer>
+<footer>Powered by <a href='https://golang.org/'>Go</a> in {{.CurrentYear}}</footer>
 <!-- And include the JavaScript file -->
 <script src="/static/js/main.js" type="text/javascript"></script>
 </body>
